signup login using pepper and salt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3205
 spring.data.mongodb.uri=mongodb+srv://MILANE5555:root#123@cluster0.pmikh1d.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=cap
+spring.data.mongodb.database=instabook_trial
 pepper = "qwerty@123
 
