--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+	"node": "16.15.1",
+	"npm": "8.5.5"
+  },
   "name": "my-frontend-social",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
